Correcciones de sintaxis, eliminación de comentarios en desuso

--- a/admin.html
+++ b/admin.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sitio administrador</title>
+
+  <link rel="icon" href="./icon1.jpg" type="image/x-icon">
+
+  <title>Administrador || Diagon Alley</title>
   <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
