--- a/escobas.html
+++ b/escobas.html
@@ -300,6 +300,8 @@
 
     <footer>
         Derechos reservados © Florencia Morelli 2023
-    </footer>
+        <br>
+        <a href="./admin.html">Administrador &#129497;</a>
+     </footer>
 </body>
 </html>
