--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
 
 
-    <title>Diagon Alley</title>
+    <title>Bienvenido al Diagon Alley</title>
 </head>
 <body>
     <header id="myHeader">
@@ -28,7 +28,6 @@
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
                 <li><a href="./carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
-                <li><a href="./admin.html">Administrador &#129497;</a></li>
             </ul>
         </nav>
     </header>
@@ -54,10 +53,7 @@
             </div>
         </div>
 
-
         <!-- aca empieza el primer carrusel -->
-
-
         <div>
             <h2>Recomendados para ti</h2>
             <div class="carrusel">
@@ -270,6 +266,10 @@
     
     <footer>
         Derechos reservados © Florencia Morelli 2023
-    </footer>
+        <br>
+        <button>
+            <a href="./admin.html">Administrador &#129497;</a>
+        </button>
+     </footer>
 </body>
 </html>
