--- a/listado.html
+++ b/listado.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="icon" href="./icon1.jpg" type="image/x-icon">
+
   <title>Listado de Productos</title>
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
-  <h1>Listado de Productos</h1>
-  <h3>Codo a Codo 2023</h3>
+  <h1>Lista de productos</h1>
   <table>
     <thead>
       <tr>
@@ -26,11 +28,10 @@
   </table>
 
   <div class="contenedor-centrado">
-    <a href="index.html">Menu principal</a>
+    <a href="./admin.html">Menu del administrador</a>
   </div>
 
   <script>
-    //const URL = "http://127.0.0.1:5000/"
     const URL = "https://yochule.pythonanywhere.com/"
 
     // Realizamos la solicitud GET al servidor para obtener todos los productos
