--- a/listadoEliminar.html
+++ b/listadoEliminar.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Listado de Productos</title>
+
+  <link rel="icon" href="./icon1.jpg" type="image/x-icon">
+
+  <title>Baja de productos</title>
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
   <h1>Baja de Productos</h1>
-  <h3>Codo a Codo 2023</h3>
   <table>
     <thead>
       <tr>
@@ -34,7 +36,7 @@
   </table>
 
   <div class="contenedor-centrado">
-    <a href="index.html">Menu principal</a>
+    <a href="./admin.html">Menu del administrador</a>
   </div>
 
   <script src="https://unpkg.com/vue@next"></script>
