--- a/login.html
+++ b/login.html
@@ -40,6 +40,9 @@
     <script src="./js/iframeResize.js"></script>
 
     <footer>
-    </footer>
+        Derechos reservados © Florencia Morelli 2023
+        <br>
+        <a href="./admin.html">Administrador &#129497;</a>
+     </footer>
 </body>
 </html>
