--- a/altas.html
+++ b/altas.html
@@ -5,28 +5,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Agregar producto</title>
-  <link rel="stylesheet" href="css/estilos.css">
+
+  <link rel="icon" href="./icon1.jpg" type="image/x-icon">
+
+  <title>Agregar un producto</title>
+  <link rel="stylesheet" href="./css/estilos.css">
 </head>
 
 <body>
-  <h1>Agregar Productos al Inventario</h1>
-  <h3>Codo a Codo 2023</h3>
+  <h1>Agregar un producto</h1>
   <form id="formulario">
-    <label for="codigo">Código:</label>
+    <label for="codigo">Codigo: </label>
     <input type="text" id="codigo" name="codigo" required><br>
 
-    <label for="descripcion">Descripción:</label>
+    <label for="descripcion">Descripcion: </label>
     <input type="text" id="descripcion" name="descripcion" required><br>    
 
-    <label for="cantidad">Cantidad:</label>
+    <label for="cantidad">Cantidad: </label>
     <input type="number" id="cantidad" name="cantidad" required><br>
 
-    <label for="precio">Precio:</label>
+    <label for="precio">Precio: </label>
     <input type="number" step="0.01" id="precio" name="precio" required><br>
 
     <button type="submit">Agregar Producto</button>
-    <a href="index.html">Menu principal</a>
+    <a href="./admin.html">Menu del administrador</a>
   </form>
   <script>
     const URL = "https://yochule.pythonanywhere.com/"
