--- a/modificaciones.html
+++ b/modificaciones.html
@@ -5,33 +5,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modificar Producto</title>
+
+  <link rel="icon" href="./icon1.jpg" type="image/x-icon">
+
+  <title>Modificación de productos</title>
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
-  <h1>Modificar Productos del Inventario</h1>
-  <h3>Codo a Codo 2023</h3>
+  <h1>Modificación de productos</h1>
   <div id="app">
     <form @submit.prevent="obtenerProducto">
-      <label for="codigo">Código:</label>
+      <label for="codigo">Codigo: </label>
       <input type="text" v-model="codigo" required><br>
-      <button type="submit">Modificar Producto</button> <a href="index.html">Menu principal</a>
+      <button type="submit">Modificar Producto</button>
+      <a href="./admin.html">Menu del administrador</a>
     </form>
 
     <div v-if="mostrarDatosProducto">
       <h2>Datos del Producto</h2>
       <form @submit.prevent="guardarCambios">
-        <label for="descripcionModificar">Descripción:</label>
+        <label for="descripcionModificar">Descripcion: </label>
         <input type="text" id="descripcionModificar" v-model="descripcion" required><br>
 
-        <label for="cantidadModificar">Cantidad:</label>
+        <label for="cantidadModificar">Cantidad: </label>
         <input type="number" id="cantidadModificar" v-model="cantidad" required><br>
 
-        <label for="precioModificar">Precio:</label>
+        <label for="precioModificar">Precio: </label>
         <input type="number" step="0.01" id="precioModificar" v-model="precio" required><br>
 
-        <button type="submit">Guardar Cambios</button>
+        <button type="submit">Guardar cambios</button>
         <a href="modificaciones.html">Cancelar</a>
       </form>
     </div>
@@ -39,7 +42,6 @@
 
   <script src="https://unpkg.com/vue@next"></script>
   <script>
-    //const URL = "http://127.0.0.1:5000/"
     const URL = "https://yochule.pythonanywhere.com/"
 
     const app = Vue.createApp({
