--- a/varitas.html
+++ b/varitas.html
@@ -253,6 +253,10 @@
 
     <footer>
         Derechos reservados © Florencia Morelli 2023
+        <br>
+        <button>
+            <a href="./admin.html">Administrador &#129497;</a>
+        </button>
     </footer>
 </body>
 </html>
