--- a/admin.html
+++ b/admin.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="./icon1.jpg" type="image/x-icon">
 
   <title>Administrador || Diagon Alley</title>
-  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="stylesheet" href="./css/admin.css">
 </head>
 
 <body>
