--- a/altas.html
+++ b/altas.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="./icon1.jpg" type="image/x-icon">
 
   <title>Agregar un producto</title>
-  <link rel="stylesheet" href="./css/estilos.css">
+  <link rel="stylesheet" href="./css/admin.css">
 </head>
 
 <body>
