--- a/listadoEliminar.html
+++ b/listadoEliminar.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="./icon1.jpg" type="image/x-icon">
 
   <title>Baja de productos</title>
-  <link rel="stylesheet" href="css/estilos.css">
+  <link rel="stylesheet" href="css/admin.css">
 </head>
 
 <body>
