Corrección de footer

--- a/carrito.html
+++ b/carrito.html
@@ -171,9 +171,12 @@
       </script>
    </main>
    <footer>
-      Derechos reservados © Florencia Morelli 2023
-      <br>
-      <a href="./admin.html">Administrador &#129497;</a>
-   </footer>
+      <div class="footer-izq">
+         Derechos reservados © Florencia Morelli 2023
+      </div>
+      <div class="footer-der">
+         <a href="./admin.html">Administrador &#129497;</a>
+      </div>
+</footer>
 </body>
 </html>
