--- a/index.html
+++ b/index.html
@@ -265,11 +265,12 @@
 
     
     <footer>
-        Derechos reservados © Florencia Morelli 2023
-        <br>
-        <button>
+        <div class="footer-izq">
+            Derechos reservados © Florencia Morelli 2023
+        </div>
+        <div class="footer-der">
             <a href="./admin.html">Administrador &#129497;</a>
-        </button>
-     </footer>
+        </div>
+    </footer>
 </body>
 </html>
