--- a/varitas.html
+++ b/varitas.html
@@ -252,11 +252,12 @@
     <script src="./js/florenciamorelli.js"></script>
 
     <footer>
-        Derechos reservados © Florencia Morelli 2023
-        <br>
-        <button>
+        <div class="footer-izq">
+            Derechos reservados © Florencia Morelli 2023
+        </div>
+        <div class="footer-der">
             <a href="./admin.html">Administrador &#129497;</a>
-        </button>
+        </div>
     </footer>
 </body>
 </html>
