--- a/login.html
+++ b/login.html
@@ -37,12 +37,14 @@
     </main>
 
     <script src="./js/florenciamorelli.js"></script>
-    <script src="./js/iframeResize.js"></script>
-
+    
     <footer>
-        Derechos reservados © Florencia Morelli 2023
-        <br>
-        <a href="./admin.html">Administrador &#129497;</a>
-     </footer>
+        <div class="footer-izq">
+            Derechos reservados © Florencia Morelli 2023
+        </div>
+        <div class="footer-der">
+            <a href="./admin.html">Administrador &#129497;</a>
+        </div>
+    </footer>
 </body>
 </html>
