created "pages" folder and moved everything but index.html there

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <script src="./js/florenciamorelli.js"></script>
 
-    <link rel="icon" href="./icon.png" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
 
 
@@ -17,17 +17,17 @@
 <body>
     <header id="myHeader">
         <div class="logo">
-            <a href="./index.html">
-                <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
+            <a href="index.html">
+                <img src="./logo1.png" alt="Logo" class="imglogo" width="300px">
             </a>
         </div>
         <nav>
             <ul>
                 <li class="selected"><a href="./index.html">Inicio</a></li>
-                <li><a href="./varitas.html">Varitas</a></li>
-                <li><a href="./escobas.html">Escobas</a></li>
-                <li><a href="./login.html">Iniciar sesion</a></li>
-                <li><a href="./carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
+                <li><a href="./pages/varitas.html">Varitas</a></li>
+                <li><a href="./pages/escobas.html">Escobas</a></li>
+                <li><a href="./pages/login.html">Iniciar sesion</a></li>
+                <li><a href="./pages/carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -48,12 +48,11 @@
             </div>
 
             <div class="bienvenidoImagen">
-<!-- no me funcionó correctamente                 <img src="./img/flooPowderChimney.jpg" alt="Chimenea para Polvos Floo" class="vertical">
- -->                <img src="./img/diagonAlleyEntry.jpg" alt="Entrada de ladrillo del Callejon Diagon" class="horizontal">
+                <img src="./img/diagonAlleyEntry.jpg" alt="Entrada de ladrillo del Callejon Diagon" class="horizontal">
             </div>
         </div>
 
-        <!-- aca empieza el primer carrusel -->
+        <!-- Primer carrusel -->
         <div>
             <h2>Recomendados para ti</h2>
             <div class="carrusel">
@@ -269,7 +268,7 @@
             Derechos reservados © Florencia Morelli 2023
         </div>
         <div class="footer-der">
-            <a href="./admin.html">Administrador &#129497;</a>
+            <a href="./pages/admin.html">Administrador &#129497;</a>
         </div>
     </footer>
 </body>
