--- a/pages/admin.html
+++ b/pages/admin.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" href="./icon1.jpg" type="image/x-icon">
+  <link rel="icon" href="../icon1.jpg" type="image/x-icon">
 
   <title>Administrador || Diagon Alley</title>
-  <link rel="stylesheet" href="./css/admin.css">
+  <link rel="stylesheet" href="../css/admin.css">
 </head>
 
 <body>
@@ -20,14 +20,13 @@
       
       <tr><td class="contenedor-centrado "><a href="./modificaciones.html">Modificar datos de productos</a></td></tr>
       <tr><td class="contenedor-centrado "><a href="./listadoEliminar.html">Eliminar productos</a></td></tr>
-<!--       <tr><td class="contenedor-centrado "><a href="carrito.html">Carrito de compras</a></td></tr> -->
     </table>
   </div>
   <div>
     <h3>Regresar a la pagina principal</h3>
   </div>
   <div class="contenedor-centrado">
-    <a href="/"><img src="logo1.png" alt="Logo" class="imglogo" width="300px"></a>
+    <a href="../index.html"><img src="../logo1.png" alt="Logo" class="imglogo" width="300px"></a>
   </div>
   
 
