--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -5,12 +5,12 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-   <link rel="stylesheet" href="./css/estilos.css">
+   <link rel="stylesheet" href="../css/estilos.css">
 
    <script src="https://unpkg.com/vue@next"></script> <!--  esto es para que funcione vue -->
 
-   <link rel="icon" href="./icon.png" type="image/x-icon">
-   <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+   <link rel="icon" href="../icon.png" type="image/x-icon">
+   <link rel="shortcut icon" href="../icon.png" type="image/x-icon">
 
 
    <title>Carrito de Diagon Alley</title>
@@ -18,13 +18,13 @@
 <body>
    <header>
       <div class="logo">
-         <a href="./index.html">
-            <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
+         <a href="../index.html">
+            <img src="../logo1.png" alt="Logo" class="imglogo" width="300px">
          </a>
       </div>
       <nav>
          <ul>
-               <li><a href="./index.html">Inicio</a></li>
+               <li><a href="../index.html">Inicio</a></li>
                <li><a href="./varitas.html">Varitas</a></li>
                <li><a href="./escobas.html">Escobas</a></li>
                <li><a href="./login.html">Iniciar sesion</a></li>
