--- a/pages/login.html
+++ b/pages/login.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
-    <link rel="icon" href="./icon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+    <link rel="icon" href="../icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../icon.png" type="image/x-icon">
 
 
     <title>Iniciar sesión en Diagon Alley</title>
@@ -16,13 +16,13 @@
 <body>
     <header>
         <div class="logo">
-            <a href="./index.html">
-                <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
+            <a href="../index.html">
+                <img src="../logo1.png" alt="Logo" class="imglogo" width="300px">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./varitas.html">Varitas</a></li>
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li class="selected"><a href="./login.html">Iniciar sesion</a></li>
@@ -36,7 +36,7 @@
         </div>
     </main>
 
-    <script src="./js/florenciamorelli.js"></script>
+    <script src="../js/florenciamorelli.js"></script>
     
     <footer>
         <div class="footer-izq">
