--- a/pages/varitas.html
+++ b/pages/varitas.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
-    <link rel="icon" href="./icon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+    <link rel="icon" href="../icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../icon.png" type="image/x-icon">
 
 
     <title>Varitas en Diagon Alley</title>
@@ -16,13 +16,13 @@
 <body>
     <header>
         <div class="logo">
-            <a href="./index.html">
-                <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
+            <a href="../index.html">
+                <img src="../logo1.png" alt="Logo" class="imglogo" width="300px">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li class="selected"><a href="./varitas.html">Varitas</a></li>
                 <li><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
@@ -39,43 +39,43 @@
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
-                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <img src="../img/varita1.jpg" alt="Varita 1" class="imgcard">
                         <h3>Varita de Sauco</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <img src="../img/varita2.jpg" alt="Varita 2" class="imgcard">
                         <h3>Varita Nogon</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <img src="../img/varita3.jpg" alt="Varita 3" class="imgcard">
                         <h3>Varita Endrino</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <img src="../img/varita4.jpg" alt="Varita 4" class="imgcard">
                         <h3>Varita Friggory</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <img src="../img/varita5.jpg" alt="Varita 5" class="imgcard">
                         <h3>Varita Alenix</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <img src="../img/varita1.jpg" alt="Varita 1" class="imgcard">
                         <h3>Varita de Sauco</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <img src="../img/varita2.jpg" alt="Varita 2" class="imgcard">
                         <h3>Varita Nogon</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <img src="../img/varita3.jpg" alt="Varita 3" class="imgcard">
                         <h3>Varita Endrino</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <img src="../img/varita4.jpg" alt="Varita 4" class="imgcard">
                         <h3>Varita Friggory</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <img src="../img/varita5.jpg" alt="Varita 5" class="imgcard">
                         <h3>Varita Alenix</h3>
                     </div>
                 </div>
@@ -93,43 +93,43 @@
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
-                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <img src="../img/varita5.jpg" alt="Varita 5" class="imgcard">
                         <h3>Varita Alenix</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <img src="../img/varita4.jpg" alt="Varita 4" class="imgcard">
                         <h3>Varita Friggory</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <img src="../img/varita3.jpg" alt="Varita 3" class="imgcard">
                         <h3>Varita Endrino</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <img src="../img/varita2.jpg" alt="Varita 2" class="imgcard">
                         <h3>Varita Nogon</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <img src="../img/varita1.jpg" alt="Varita 1" class="imgcard">
                         <h3>Varita de Sauco</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <img src="../img/varita5.jpg" alt="Varita 5" class="imgcard">
                         <h3>Varita Alenix</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <img src="../img/varita4.jpg" alt="Varita 4" class="imgcard">
                         <h3>Varita Friggory</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <img src="../img/varita3.jpg" alt="Varita 3" class="imgcard">
                         <h3>Varita Endrino</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <img src="../img/varita2.jpg" alt="Varita 2" class="imgcard">
                         <h3>Varita Nogon</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <img src="../img/varita1.jpg" alt="Varita 1" class="imgcard">
                         <h3>Varita de Sauco</h3>
                     </div>
                 </div>
@@ -147,43 +147,43 @@
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
-                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <img src="../img/varita3.jpg" alt="Varita 3" class="imgcard">
                         <h3>Varita Endrino</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <img src="../img/varita5.jpg" alt="Varita 5" class="imgcard">
                         <h3>Varita Alenix</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <img src="../img/varita2.jpg" alt="Varita 2" class="imgcard">
                         <h3>Varita Nogon</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <img src="../img/varita4.jpg" alt="Varita 4" class="imgcard">
                         <h3>Varita Friggory</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <img src="../img/varita1.jpg" alt="Varita 1" class="imgcard">
                         <h3>Varita de Sauco</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <img src="../img/varita4.jpg" alt="Varita 4" class="imgcard">
                         <h3>Varita Friggory</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <img src="../img/varita2.jpg" alt="Varita 2" class="imgcard">
                         <h3>Varita Nogon</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <img src="../img/varita5.jpg" alt="Varita 5" class="imgcard">
                         <h3>Varita Alenix</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <img src="../img/varita1.jpg" alt="Varita 1" class="imgcard">
                         <h3>Varita de Sauco</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <img src="../img/varita3.jpg" alt="Varita 3" class="imgcard">
                         <h3>Varita Endrino</h3>
                     </div>
                 </div>
@@ -201,43 +201,43 @@
                 </div>
                 <div class="carrusel-contenedor">
                     <div class="card">
-                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <img src="../img/varita2.jpg" alt="Varita 2" class="imgcard">
                         <h3>Varita Nogon</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <img src="../img/varita4.jpg" alt="Varita 4" class="imgcard">
                         <h3>Varita Friggory</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <img src="../img/varita5.jpg" alt="Varita 5" class="imgcard">
                         <h3>Varita Alenix</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <img src="../img/varita3.jpg" alt="Varita 3" class="imgcard">
                         <h3>Varita Endrino</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <img src="../img/varita1.jpg" alt="Varita 1" class="imgcard">
                         <h3>Varita de Sauco</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <img src="../img/varita3.jpg" alt="Varita 3" class="imgcard">
                         <h3>Varita Endrino</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita5.jpg" alt="Varita 5" class="imgcard">
+                        <img src="../img/varita5.jpg" alt="Varita 5" class="imgcard">
                         <h3>Varita Alenix</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita2.jpg" alt="Varita 2" class="imgcard">
+                        <img src="../img/varita2.jpg" alt="Varita 2" class="imgcard">
                         <h3>Varita Nogon</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita4.jpg" alt="Varita 4" class="imgcard">
+                        <img src="../img/varita4.jpg" alt="Varita 4" class="imgcard">
                         <h3>Varita Friggory</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <img src="../img/varita1.jpg" alt="Varita 1" class="imgcard">
                         <h3>Varita de Sauco</h3>
                     </div>
                 </div>
@@ -249,7 +249,7 @@
         <br>
     </main>
 
-    <script src="./js/florenciamorelli.js"></script>
+    <script src="../js/florenciamorelli.js"></script>
 
     <footer>
         <div class="footer-izq">
