--- a/pages/escobas.html
+++ b/pages/escobas.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
-    <link rel="icon" href="./icon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+    <link rel="icon" href="../icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../icon.png" type="image/x-icon">
 
     <title>Escobas en Diagon Alley</title>
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="./index.html">
-                <img src="logo1.png" alt="Logo" class="imglogo" width="300px">
+            <a href="../index.html">
+                <img src="../logo1.png" alt="Logo" class="imglogo" width="300px">
             </a>
         </div>
         <nav>
             <ul>
-                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./varitas.html">Varitas</a></li>
                 <li class="selected"><a href="./escobas.html">Escobas</a></li>
                 <li><a href="./login.html">Iniciar sesion</a></li>
@@ -36,51 +36,51 @@
                 <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 <div class="carrusel-contenedor">
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Nimbus 2000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Nimbus 2001</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <img src="../img/escoba5.jpg" alt="Escoba 5" class="imgcard">
                         <h3>Nimbus 2003</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Nimbus 2000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Nimbus 2001</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <img src="../img/escoba5.jpg" alt="Escoba 5" class="imgcard">
                         <h3>Nimbus 2003</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Nimbus 2000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Nimbus 2001</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <img src="../img/escoba5.jpg" alt="Escoba 5" class="imgcard">
                         <h3>Nimbus 2003</h3>
                     </div>
                 </div>
@@ -94,51 +94,51 @@
                 <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 <div class="carrusel-contenedor">
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Cometa 140</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <img src="../img/escoba5.jpg" alt="Escoba 5" class="imgcard">
                         <h3>Cometa 280</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Cometa 260</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Cometa 290</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Cometa 140</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <img src="../img/escoba5.jpg" alt="Escoba 5" class="imgcard">
                         <h3>Cometa 280</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Cometa 260</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Cometa 290</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Cometa 140</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <img src="../img/escoba5.jpg" alt="Escoba 5" class="imgcard">
                         <h3>Cometa 280</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Cometa 260</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Cometa 290</h3>
                     </div>
                 </div>
@@ -152,67 +152,67 @@
                 <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 <div class="carrusel-contenedor">
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <img src="../img/escoba4.jpg" alt="Escoba 4" class="imgcard">
                         <h3>Cometa 180</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Nimbus 2001</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Cometa 290</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <img src="../img/escoba4.jpg" alt="Escoba 4" class="imgcard">
                         <h3>Cometa 180</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Nimbus 2001</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Cometa 290</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <img src="../img/escoba4.jpg" alt="Escoba 4" class="imgcard">
                         <h3>Cometa 180</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Nimbus 2001</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Cometa 290</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <img src="../img/escoba4.jpg" alt="Escoba 4" class="imgcard">
                         <h3>Cometa 180</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <img src="../img/escoba3.jpg" alt="Escoba 3" class="imgcard">
                         <h3>Nimbus 2001</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Cometa 290</h3>
                     </div>
                 </div>
@@ -226,67 +226,67 @@
                 <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
                 <div class="carrusel-contenedor">
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <img src="../img/escoba4.jpg" alt="Escoba 4" class="imgcard">
                         <h3>Cometa 180</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Nimbus 2000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Cometa 260</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <img src="../img/escoba4.jpg" alt="Escoba 4" class="imgcard">
                         <h3>Cometa 180</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Nimbus 2000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Cometa 260</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <img src="../img/escoba4.jpg" alt="Escoba 4" class="imgcard">
                         <h3>Cometa 180</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Nimbus 2000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Cometa 260</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba1.jpg" alt="Escoba 1" class="imgcard">
+                        <img src="../img/escoba1.jpg" alt="Escoba 1" class="imgcard">
                         <h3>Nimbus 1000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba4.jpg" alt="Escoba 4" class="imgcard">
+                        <img src="../img/escoba4.jpg" alt="Escoba 4" class="imgcard">
                         <h3>Cometa 180</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Nimbus 2000</h3>
                     </div>
                     <div class="card">
-                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <img src="../img/escoba2.jpg" alt="Escoba 2" class="imgcard">
                         <h3>Cometa 260</h3>
                     </div>
                 </div>
@@ -296,7 +296,7 @@
         
     </main>
 
-    <script src="./js/florenciamorelli.js"></script>
+    <script src="../js/florenciamorelli.js"></script>
 
     <footer>
         <div class="footer-izq">
