--- a/pages/modificaciones.html
+++ b/pages/modificaciones.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" href="./icon1.jpg" type="image/x-icon">
+  <link rel="icon" href="../icon1.jpg" type="image/x-icon">
 
   <title>Modificación de productos</title>
-  <link rel="stylesheet" href="css/admin.css">
+  <link rel="stylesheet" href="../css/admin.css">
 </head>
 
 <body>
