--- a/index.html
+++ b/index.html
@@ -23,11 +23,23 @@
         </div>
         <nav>
             <ul>
-                <li class="selected"><a href="./index.html">Inicio</a></li>
-                <li><a href="./pages/varitas.html">Varitas</a></li>
-                <li><a href="./pages/escobas.html">Escobas</a></li>
-                <li><a href="./pages/login.html">Iniciar sesion</a></li>
-                <li><a href="./pages/carrito.html"><i class="fi fi-rr-shopping-cart"></i></a></li>
+                <li class="selected">
+                    <a href="./index.html">Inicio</a>
+                </li>
+                <li>
+                    <a href="./pages/varitas.html">Varitas</a>
+                </li>
+                <li>
+                    <a href="./pages/escobas.html">Escobas</a>
+                </li>
+                <li>
+                    <a href="./pages/login.html">Iniciar sesion</a>
+                </li>
+                <li>
+                    <a href="./pages/carrito.html">
+                        <i class="fi fi-rr-shopping-cart"></i>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -57,44 +69,44 @@
             <h2>Recomendados para ti</h2>
             <div class="carrusel">
                 <button class="carrusel-boton carrusel-anterior"><i class="fi fi-rs-angle-left"></i></button>
-            <div class="carrusel-contenedor">
-                <div class="card">
-                    <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
-                    <h3>Nimbus 2001</h3>
+                <div class="carrusel-contenedor">
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
+                        <h3>Varita de Sauco</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
+                        <h3>Cometa 260</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
+                        <h3>Nimbus 2001</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
+                        <h3>Varita Endrino</h3>
+                    </div>
+                    <div class="card">
+                        <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
+                        <h3>Nimbus 2000</h3>
+                    </div>
                 </div>
-                <div class="card">
-                    <img src="./img/varita1.jpg" alt="Varita 1" class="imgcard">
-                    <h3>Varita de Sauco</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
-                    <h3>Varita Endrino</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba2.jpg" alt="Escoba 2" class="imgcard">
-                    <h3>Cometa 260</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
-                    <h3>Nimbus 2000</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba5.jpg" alt="Escoba 5" class="imgcard">
-                    <h3>Nimbus 2001</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
-                    <h3>Nimbus 2000</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/varita3.jpg" alt="Varita 3" class="imgcard">
-                    <h3>Varita Endrino</h3>
-                </div>
-                <div class="card">
-                    <img src="./img/escoba3.jpg" alt="Escoba 3" class="imgcard">
-                    <h3>Nimbus 2000</h3>
-                </div>
-            </div>
                 <button class="carrusel-boton carrusel-siguiente"><i class="fi fi-rs-angle-right"></i></button>
             </div>
         </div>
